20 Jul 2008 Implementation of cmdtgt command - Bernard van der Helm
18 Jul 2008 Fix PSF order 18 suborder 01 PSF and SSD length - Fish
17 Jul 2008 Fix LCS write FCS (Frame Check Sequence) and other bugs - Fish
16 Jul 2008 Increase time-interval accuracy to 1ms for Windows build - Fish
10 Jul 2008 panel support for scrolling up/down one line - Fish
08 Jul 2008 AUTOMOUNT redesign: support +allowed/-disallowed dirs
            and create associated 'automount' panel command - Fish
22 Jun 2008 Fix tape messages print format bug causing crash - Fish
28 May 2008 AUTOMOUNT fixed and enhanced so it actually works now - Fish
28 May 2008 Misleading VTAPE support renamed to AUTOMOUNT instead - Fish
24 May 2008 VTAPE automount support (CCW 0x4B + 0xE4) - Fish
22 May 2008 Attempt to fix my *nix SCSI tape BSR over tapemark bug
            identified by Bob Schneider [bschneider@pingdata.net] - Fish
22 May 2008 Tape file extension neutrality support - Fish
22 May 2008 Flex FakeTape support - Fish
22 May 2008 Fix read timeout bug in LCS logic - Fish
19 May 2008 PSF order 18 suborders (0E,41) and order 1D by Jacob Dekel - Roger Bowler
04 May 2008 Fix CGDR,CGXR to handle values exceeding 2G - Roger Bowler
25 Apr 2008 CGER result incorrect for values over 2G - Roger Bowler
22 Apr 2008 Correction to CXGR instruction - Roger Bowler
21 Apr 2008 CEGR result incorrect if source exceeds 6 digits - Roger Bowler
20 Apr 2008 CDGR result incorrect if source exceeds 14 digits - Roger Bowler
18 Apr 2008 Fix incorrect results from THDER,THDR instructions - Roger Bowler
16 Apr 2008 Fix condition code in LCEBR,LCDBR,LCXBR instructions - Roger Bowler
16 Apr 2008 Fix FIEBR,FIDBR,FIXBR to respect BFP rounding mode - Roger Bowler
08 Apr 2008 Add execute relative long instruction - Bernard van der Helm
31 Mar 2008 Fix SCSI tape i/o performance: now 10x faster! - Fish
30 Mar 2008 Fix SCSI tape EOV (end of volume) processing - Fish
29 Mar 2008 More complete/extensive 3490/3590 tape support - Fish