@@ -1,3 +1,4 @@
+24 Jul 2008 Implementation of cmdtgt version 2 - Bernard van der Helm
 20 Jul 2008 Implementation of cmdtgt command - Bernard van der Helm
 18 Jul 2008 Fix PSF order 18 suborder 01 PSF and SSD length - Fish
 17 Jul 2008 Fix LCS write FCS (Frame Check Sequence) and other bugs - Fish
